--- a/src/components/pages/Exercise02/assets/styles.css
+++ b/src/components/pages/Exercise02/assets/styles.css
@@ -1,8 +1,46 @@
+* {
+  z-index: 5;
+}
+
 .movie-library {
   background-color: var(--black);
   color: var(--white);
   min-height: 100vh;
   padding: 2em;
+  position: relative;
+}
+
+.movie-library:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 0;
+  background: transparent;
+  background: linear-gradient(
+    0deg,
+    rgba(0, 0, 0, 0.9) 0%,
+    rgba(0, 0, 0, 0.9248074229691877) 53%,
+    rgba(0, 0, 0, 0.8715861344537815) 59%,
+    rgba(0, 0, 0, 0.8015581232492998) 68%,
+    rgba(0, 0, 0, 0.7679446778711485) 76%,
+    rgba(0, 0, 0, 0.6923144257703081) 82%,
+    rgba(0, 0, 0, 0.5802696078431373) 88%,
+    rgba(0, 0, 0, 0.3533788515406162) 94%,
+    rgba(0, 0, 0, 0) 100%
+  );
+}
+
+.movie-library__wallpaper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  object-fit: cover;
+  width: 100%;
+  height: auto;
 }
 
 .movie-library__title {
@@ -13,15 +51,24 @@
 .movie-library__actions {
   display: flex;
   margin-bottom: 1em;
+  border-right: 0.5em;
 }
 
 .movie-library__actions select {
   width: 100%;
-  padding: .25em;
+  padding: 0.7em;
+  border-radius: 0.3em 0 0 0.3em;
+  border: solid var(--ms-green) 0.15em;
+  outline: none;
 }
 
 .movie-library__actions button {
   white-space: nowrap;
+  background: var(--ms-green);
+  border-radius: 0 0.15em 0.3em 0;
+  border: solid var(--ms-green) 0.3em;
+  padding: 0.7em;
+  font-weight: bold;
 }
 
 .movie-library__loading {
@@ -34,24 +81,76 @@
 
 .movie-library__list {
   padding: 1em;
-  background-color: #222222;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .movie-library__card {
+  width: 300px;
+  height: 500px;
+  margin: 0.5em;
   background-color: #333333;
-  margin-bottom: 1em;
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: stretch;
+  position: relative;
+  font-weight: lighter;
+  border-radius: 0.5em;
+  overflow: hidden;
+}
+
+.movie-library__card:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgb(151, 215, 0);
+  background: linear-gradient(
+    0deg,
+    rgba(151, 215, 0, 0.9) 0%,
+    rgba(151, 215, 0, 0.8) 16%,
+    rgba(151, 215, 0, 0.7) 25%,
+    rgba(151, 215, 0, 0.55) 34%,
+    rgba(151, 215, 0, 0.3) 51%,
+    rgba(151, 215, 0, 0) 70%,
+    rgba(151, 215, 0, 0) 100%
+  );
+  z-index: 5;
+}
+
+.movie-library__card--poster {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .movie-library__card img {
-  width: 10em;
+  object-fit: cover;
+  height: 100%;
 }
 
-.movie-library__card ul {
-  padding: 1em;
+.movie-library__card--info {
+  padding: 0 1em;
+  margin: 0 0 1em 0;
+  z-index: 10;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: stretch;
 }
 
-.movie-library__card li {
+.movie-library__card--info li {
   line-height: 120%;
+}
+
+.movie-library__card--info--title {
+  font-weight: 600;
+  font-size: 1.2em;
 }
